--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -7,7 +7,7 @@
                 {{ post.published_date }}
             </div>
             {% if user.is_authenticated %}
-                <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+                <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}">Edit</a>
             {% endif %}
             <p>{{ post.text|linebreaksbr }}</p>
         </div>
